[package]
name = "json-surf"
version = "0.8.0"
authors = ["Saurav Gupta <sgrust01@gmail.com>"]
edition = "2018"
description = """
Search/Analyze JSON and Rust Struct
"""
documentation = "https://docs.rs/json-surf"
repository = "https://github.com/sgrust01/json-surf.git"
publish = true
keywords = ["json","struct", "lucene", "tantivy"]
license = "MIT"
categories = ["parsing", "web-programming", "database-implementations", "text-processing"]
readme = "README.md"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-value="0.6.0"
serde_json = "1.0"
failure= "0.1.6"
rand = "0.7.3"

# Star of the show
tantivy = "0.13.0"

# Supports Spelling correction
symspell="0.4.1"


[[example]]
name="helloworld"
path="examples/01_helloworld.rs"

[[example]]
name="tantivy"
path= "examples/02_example_from_tantivy.rs"

[[example]]
name="binarydata"
path="examples/04_binary_data.rs"


[[example]]
name="fuzzy"
path= "examples/03_fuzzy_user_name.rs"
